--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</main>
 	<footer class="attribution">
 		Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-		Coded by <a href="#">Nicolas Lugo</a>.
+		Coded by <a href="https://github.com/nicolugocbz86" target="_blank">Nicolas Lugo</a>.
 	</footer>
 </body>
 </html>
